--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -35,6 +35,10 @@
     padding: 0;
 }
 
+body {
+    scroll-behavior: smooth;
+}
+
 //home
 
 .home {
@@ -316,7 +320,7 @@
         display: none;
     }
     &-carousel {
-        z-index: 1;
+        z-index: 15;
         width: 85%;
         margin: 0 auto;
         display: grid;
@@ -380,13 +384,14 @@
         }
     }
     &-controls {
-        z-index: 1;
+        z-index: 15;
         margin-top: 38px;
         display: flex;
         justify-content: space-between;
         width: 78px;
         height: 10px;
         .offer-control {
+            z-index: 15;
             width: 10px;
             height: 10px;
             border-radius: 50%;
