--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -296,7 +296,7 @@ body {
 }
 
 .offer {
-    z-index: -1;
+    //z-index: -1;
     position: relative;
     height: 622px;
     background-image: url('../images/offer-bg.png');
